@@ -2,8 +2,10 @@
 # This file is updated with Maddlog
 
 * Mon Mar 29 2021 Sjoerd Mullender <sjoerd@acm.org>
+- Implemented function BUNreplacemultiincr to replace multiple values
+  in a BAT in one go, starting at a given position.
 - Implemented new function BUNreplacemulti to replace multiple values
-  in a BAT in one go.
+  in a BAT in one go, at the given positions.
 - Removed function BUNinplace, just use BUNreplace, and check whether
   the BAT argument is of type TYPE_void before calling if you don't
   want to materialize.
